--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,6 +6,10 @@
     "axios": "^1.8.1",
     "chart.js": "^4.4.8",
     "cra-template": "1.2.0",
+    "datatables.net-dt": "^2.2.2",
+    "datatables.net-react": "^1.0.0",
+    "datatables.net-responsive-dt": "^3.0.4",
+    "datatables.net-select-dt": "^3.0.0",
     "react": "^19.0.0",
     "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.0.0",
